--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.11.1",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-markdown": "^10.1.0",
-    "rehype-highlight": "^7.0.2"
+    "rehype-highlight": "^7.0.2",
+    "rehype-slug": "^6.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
