--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.11.1",
+    "mermaid": "^11.12.3",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
