--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-markdown": "^10.1.0",
+    "react-zoom-pan-pinch": "^3.7.0",
     "rehype-highlight": "^7.0.2",
     "rehype-slug": "^6.0.0"
   },
